add endpoints for accounts, get user, fix bugs
